--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "jquery": "^3.2.0",
     "vue": "^2.2.2",
     "vue-baidu-map": "^0.1.9",
+    "vue-resource": "^1.2.1",
     "vue-router": "^2.2.0"
   },
   "devDependencies": {
